...
                app:boxStrokeErrorColor="@color/colorAccent"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/white">

                <EditText
                    android:id="@+id/email_et"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"/>

...
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/nunito_bold"
            android:text="Login"
            android:textColor="@color/white"
            android:transitionName="btn_tran" />

        <Button
            android:id="@+id/login_forgot_btn"
            android:layout_width="wrap_content"
...
