<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:orientation="vertical"
    tools:context=".Activities.UserProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#34445e"
        android:padding="20dp">


        <ImageView
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit"
            android:visibility="gone"
            tools:visibility="visible" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_userprofile_placeholder"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/updateBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_update_image"
            android:visibility="gone"
            app:tint="@color/white"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/profile_name_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profile_image"
            android:fontFamily="@font/nunito_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="Alex Eyre" />

        <TextView
            android:id="@+id/profile_email_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name_banner"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profile_image"
            android:fontFamily="@font/nunito_regular"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="eyrealex97@gmail.com" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/nunito_regular"
                tools:text="Alex Eyre" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/nunito_regular"
                tools:text="eyrealex@gmail.com" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/nunito_regular"
                tools:text="08457621445" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_out_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/nunito_bold"
            android:onClick="sign_out"
            android:text="Sign Out"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />


    </LinearLayout>

</LinearLayout>