...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="parent">

...
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:onClick="Profile"
            android:src="@drawable/ic_userprofile_placeholder"
            app:civ_border_color="@color/colorAccent"
...
